<resources>
    <string name="connectivity_exception">No connectivity exception</string>
    <string name="try_again">An error has occurred, try again later.</string>
    <string name="no_internet">Check your internet connection and try again.</string>
    <string name="unknown_error">Oops, something wrong happened.</string>
    <string name="text_logout">Log out</string>
    <string name="text_support">Support</string>
    <string name="text_about">About us</string>
    <string name="text_status">Status</string>
    <string name="text_all">All</string>
    <string name="text_currency">Cryptocurrency</string>
    <string name="app_name">Cryptobucks SDK</string>
    <string name="text_merchant_sale">Merchant Sale</string>
    <string name="text_tax_rate">Tax Rate</string>
    <string name="text_tax">$0.00 (0.000%)</string>
    <string name="text_add_tax">+ADD TAX RATE</string>
    <string name="text_continue">Continue</string>
    <string name="text_contract_person">Customer Name</string>
    <string name="text_email">E-mail</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_note">Note</string>
    <string name="text_add_tip">Add tip</string>
    <string name="text_send">send</string>
    <string name="text_failed_transaction">Failed Transaction</string>
    <string name="text_enter_valid_amount">Enter valid amount</string>
    <string name="text_required_contract_person">Enter customer name</string>
    <string name="text_required_email">Enter a valid email</string>
    <string name="text_required_amount">Enter amount</string>
    <string name="text_required_phone_number">Enter phone number</string>
    <string name="text_success">Success</string>
    <string name="text_invoice_has_been">Your invoce has been sent</string>
    <string name="text_view_invoice">View invoice</string>
    <string name="text_date_invoice">Date of invoice</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone</string>
    <string name="text_notes">Notes</string>
    <string name="text_sales">Sale $ USD</string>
    <string name="text_tax_amount">Tax Amount</string>
    <string name="text_transfer">Please transfer the crypto amount of the specified total USD to this wallet address then input the transaction code below for properly validate your transaction</string>
    <string name="text_web_link">Destination Tag</string>
    <string name="text_tip_amount">Tip Amount</string>
    <string name="text_network_fee">Network fee</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_payment_options">Payment Options</string>
    <string name="text_scan_qr">Or scan the QR code with your wallet</string>
    <string name="text_fee">Network fee of 1% will be charged to any incoming transaction</string>
    <string name="text_litecoin">Litecoin</string>
    <string name="text_sale_amount">Sale Amount</string>
    <string name="text_received_crypto">Received Crypto</string>
    <string name="text_settled_amount">Settled Amount</string>
    <string name="text_wallet_address">Wallet Address</string>
    <string name="text_crypto_transaction_id">Crypto Transaction ID</string>
    <string name="text_fiat_rate">Fiat rate</string>
</resources>