<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grupo1">
        <item
            android:id="@+id/logout_item"
            android:title="@string/text_logout"
            android:visible="false"
            app:showAsAction="collapseActionView" />
    </group>

    <group android:id="@+id/grupo2">
        <item
            android:id="@+id/support_item"
            android:title="@string/text_support"
            android:visible="false"
            app:showAsAction="collapseActionView" />
    </group>

    <group android:id="@+id/grupo">
        <item
            android:id="@+id/about_item"
            android:title="@string/text_about"
            android:visible="false"
            app:showAsAction="collapseActionView" />
    </group>

    <group android:id="@+id/grupo3">
        <item
            android:id="@+id/close_item"
            android:icon="@drawable/icn_close"
            android:title="@string/text_logout"
            android:visible="false"
            app:showAsAction="ifRoom" />
    </group>

</menu>